--- a/serial-dilution/serialStyle.css
+++ b/serial-dilution/serialStyle.css
@@ -15,6 +15,8 @@ input{
 td{
     padding-left: 5px;
     padding-right: 5px;
+    border: none;
+    cursor: auto;
 }
 
 /*Place holder text color. Probably only works in Chrome */
