--- a/static/css/header-styles.css
+++ b/static/css/header-styles.css
@@ -36,88 +36,3 @@ ul li li a{
     position: fixed;
     right: 265px;
 }
-
-
-
-
-
-
-.inline-div{
-    display:inline-block;
-    margin: 20px;
-}
-
-input{
-    color:white;
-    margin-top: 10px;
-    background: #5b9bd5;
-    height: 40px;
-    border-radius: 10px;
-}
-
-/*Place holder text color. Probably only works in Chrome */
-::-webkit-input-placeholder{
-    color: white;
-}
-
-html,body{
-    background-color: #cccccc;
-    width:100%;
-    margin:0px;
-}
-
-button{
-    color:white;
-    margin-top: 10px;
-    background: #92d050;
-    height:30px;
-    border-radius: 10px;
-}
-
-#headerDiv h2{
-    margin-top: 100px;
-    text-align: center;
-    font-family: sans-serif;
-}
-h3{
-    background: -webkit-linear-gradient(white, #b9d5ed);
-    text-align: center;
-    font-family: sans-serif;
-
-    width: 35em;
-    height: 30px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/* This is a hack. Need to fix to fix this to really center */
-#divContainer{
-    position: absolute;
-    left: 25%;
-}
-
-#answerDiv{
-    display: none;
-    position: absolute;
-    background: white;
-    width:100%;
-    height:100%;
-    bottom: 0;
-}
-
-.caption{
-    position: relative;
-    bottom: 125px;
-    text-align: center;
-}
-
-#arrowContainer{
-    text-align: center;
-}
-
-#arrowContainer img{
-    height: 35px;
-    width: 100px;
-    margin-top: 10px;
-}
-
